# RDPRO-26ss

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENTS.md  LICENSE  README.md  ab_loss_imbalance_plan.md  build_vision_benchmarks_notebook.py  cost_meter.py  dataset_analyzer.py  env_loader.py  features_extraction_api.py  integration_update_colab.ipynb  kaggle_benchmark_colab.ipynb  kb_mining_plan(2).md  main.py  pipeline.py  pyproject.toml  recipe_layer_plan.md  report.md  requirements.txt  run_and_log.py  run_for_testing.py  run_kaggle_benchmark.py  skrub_pipeline.py  test_pipeline.py  vision_benchmark_catalog.py  vision_benchmarks_colab.ipynb
analyzer/: image_metadata.py  image_quality.py  image_statistics.py  summary_generator.py  test_image_statistics.py
configs/: pipeline.yaml
docs/: MODULE3_API.md  features_extraction_api.md  module3_4_technical_cn.md  module3_improvements.md  next_steps.md  project_report_cn.md  recommender.md  report_module3.md  workflow_overview.md
features/: feature_extractor.py
ingestion/: image_loader.py  kaggle_loader.py  test_dataset.py
kb_mining/: .gitignore  __init__.py  aggregate.py  catalog.py  decide.py  extract.py  harvest.py
module4_agent/: __init__.py  __main__.py  ablation.py  code_generator.py  executor.py  experiment_loop.py  experiment_tracker.py  llm_codegen.py  prompts.py  refinement.py  reviewer.py  schemas.py  smoke_harness.py  spec_builder.py  workflow.py
processors/: image_standardizer.py
recipe/: __init__.py  augment.py  layer.py  tables.py
recommender/: __init__.py  fingerprint.py  logme.py  (+4 more)
(+40 files in other folders)
