[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiaozi"
version = "0.1.0"
description = "Integrated CV Auto-DL pipeline with retrieval and Module 4 code generation."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jiaozi Project Team" }
]
dependencies = [
  "chromadb",
  "datasets",
  "networkx",
  "numpy",
  "openai>=2.0.0",
  "pandas",
  "pillow",
  "sentence-transformers",
  "torch",
  "torchvision",
  "transformers",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
include = [
  "analyzer*",
  "experiments*",
  "features*",
  "ingestion*",
  "module4_agent*",
  "processors*",
  "recipe*",
  "retrieval*",
]
